# Substitute-Backend

./: .gitattributes  .gitignore  .releaserc.cjs  AGENTS.md  CHANGELOG.md  README.md  __init__.py  configure_model_root.py  package-lock.json  package.json  prestartup_script.py  pyproject.toml  substitute_backend_prestartup.py
.github/workflows/: release.yml
scripts/: update-release-versions.mjs
substitute_backend/: __init__.py
substitute_backend/api/: __init__.py  errors.py  serialization.py
substitute_backend/application/: __init__.py
substitute_backend/domain/: __init__.py
substitute_backend/features/: __init__.py
substitute_backend/features/cube_library/: __init__.py
substitute_backend/host/: __init__.py  extension.py  routes.py
substitute_backend/infrastructure/: __init__.py  cache_paths.py  diagnostics.py  logging.py  sugarcubes_host_api.py
tests/: test_capabilities_and_routes.py  test_catalog_service.py  test_configured_model_choice_refresh_contract.py  test_cube_library_change_monitor.py  test_cube_library_events.py  test_cube_library_icon_contract.py  test_cube_library_routes.py  test_cube_library_workflow_compile.py  test_cube_outputs.py  test_diagnostics.py  test_download_telemetry.py  test_environment_management.py  test_fingerprint_and_preview.py  test_license_headers.py  test_model_folder_changes.py  test_model_loading_telemetry.py  test_model_root_management.py  test_preview_assets.py  test_preview_routing.py  test_prompt_queue.py  test_sugar_compile.py  test_sugar_live_node_definitions.py  test_sugarcubes_adapter.py  test_sugarcubes_host_api.py
tools/: __init__.py  add_license_headers.py
(+157 files in other folders)
